# CognitiveTree-AI

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
cognitivetree/: __init__.py  config.py  demo.py  node.py  policies.py  search.py  session.py  state.py  tree.py
cognitivetree/feedback/: __init__.py  composite.py  demo.py  execution_critic.py  revision.py  rewards.py
cognitivetree/integrations/: __init__.py  langgraph_adapter.py
cognitivetree/llm/: __init__.py  client.py  critic.py  generator.py  openai_compatible.py  parsing.py  prompts.py
cognitivetree/sandbox/: __init__.py  backends.py  demo.py  docker_executor.py  evaluation.py  executor.py  extraction.py  spec.py  subprocess_executor.py
cognitivetree/sandbox/image/: Dockerfile
cognitivetree/ui/: __init__.py  events.py  page.py  serve.py  server.py
tests/: test_docker_executor.py  test_execution_critic.py  test_execution_evaluator.py  test_extraction.py  test_langgraph_adapter.py  test_llm_client.py  test_llm_parsing.py  test_llm_policies.py  test_reflective_search.py  test_revision.py  test_rewards.py  test_sandbox_search_integration.py  test_search.py  test_session.py  test_state_machine.py  test_subprocess_executor.py  test_tree.py  test_ui_server.py
