[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cognitivetree-ai"
version = "0.1.0"
description = "Autonomous reasoning framework combining Tree-of-Thoughts search, sandboxed code execution, and critique-driven backtracking."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]
langgraph = ["langgraph>=0.2"]

[project.scripts]
cognitivetree-ui = "cognitivetree.ui.serve:main"

[tool.setuptools.packages.find]
include = ["cognitivetree*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
