[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cognitivetree-ai"
version = "0.1.0"
description = "Autonomous reasoning framework combining Tree-of-Thoughts search, sandboxed code execution, and critique-driven backtracking."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.6"]
langgraph = ["langgraph>=0.2"]

[project.scripts]
cognitivetree-ui = "cognitivetree.ui.serve:main"

[tool.setuptools.packages.find]
include = ["cognitivetree*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
# Curated for correctness and modern idiom without stylistic noise:
# pycodestyle/pyflakes baseline, import ordering, bugbear, comprehension and
# pyupgrade modernization, and a conservative slice of flake8-simplify.
select = ["E", "F", "I", "W", "B", "C4", "UP", "SIM"]

[tool.ruff.lint.isort]
known-first-party = ["cognitivetree"]
